cmake_minimum_required(VERSION 3.12)
project(parallel_packrat)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(meta_grammar)
add_subdirectory(packrat_cell)
add_subdirectory(bottom_up)
add_subdirectory(peg)
add_subdirectory(peg_factory)
add_subdirectory(peg_visitor)
add_subdirectory(serial)
add_subdirectory(syntax_tree)
add_subdirectory(visitor_example)

include_directories(meta_grammar)
include_directories(packrat_cell)
include_directories(bottom_up)
include_directories(peg)
include_directories(peg_factory)
include_directories(peg_visitor)
include_directories(serial)
include_directories(syntax_tree)
include_directories(visitor_example)

add_executable(parallel_packrat serial/main.cpp)
