cmake_minimum_required(VERSION 3.12)

set(CMAKE_CXX_STANDARD 14)

#add_executable(serial main.cpp packrat_cell/cell.cpp packrat_cell/cell.h peg/peg_elements.cpp peg/peg_elements.h serial/serial_packrat.h serial/serial_packrat.cpp meta_grammar/meta_grammar.cpp peg/peg.cpp peg/peg.h peg_visitor/peg_visitor.cpp peg_visitor/peg_visitor.h meta_grammar/meta_grammar.h serial/serial_tree_packrat.cpp serial/serial_tree_packrat.h syntax_tree/tree_node.cpp syntax_tree/tree_node.h peg_factory/peg_factory.cpp peg_factory/peg_factory.h)
#add_executable(fact fact.cpp packrat_cell/cell.cpp packrat_cell/cell.h peg/peg_elements.cpp peg/peg_elements.h serial/serial_packrat.h serial/serial_packrat.cpp meta_grammar/meta_grammar.cpp peg/peg.cpp peg/peg.h peg_visitor/peg_visitor.cpp peg_visitor/peg_visitor.h meta_grammar/meta_grammar.h serial/serial_tree_packrat.cpp serial/serial_tree_packrat.h syntax_tree/tree_node.cpp syntax_tree/tree_node.h peg_factory/peg_factory.cpp peg_factory/peg_factory.h)
#add_executable(debug debug.cpp packrat_cell/cell.cpp packrat_cell/cell.h peg/peg_elements.cpp peg/peg_elements.h serial/serial_packrat.h serial/serial_packrat.cpp meta_grammar/meta_grammar.cpp peg/peg.cpp peg/peg.h peg_visitor/peg_visitor.cpp peg_visitor/peg_visitor.h meta_grammar/meta_grammar.h serial/serial_tree_packrat.cpp serial/serial_tree_packrat.h syntax_tree/tree_node.cpp syntax_tree/tree_node.h peg_factory/peg_factory.cpp peg_factory/peg_factory.h)
add_executable(serial_java java_parse.cpp ../packrat_cell/cell.cpp ../packrat_cell/cell.h ../peg/peg_elements.cpp ../peg/peg_elements.h serial_packrat.h serial_packrat.cpp ../meta_grammar/meta_grammar.cpp ../peg/peg.cpp ../peg/peg.h ../peg_visitor/peg_visitor.cpp ../peg_visitor/peg_visitor.h ../meta_grammar/meta_grammar.h serial_tree_packrat.cpp ../serial/serial_tree_packrat.h ../syntax_tree/tree_node.cpp ../syntax_tree/tree_node.h ../peg_factory/peg_factory.cpp ../peg_factory/peg_factory.h)
